# pyrogram

./: .deepsource.toml  .gitignore  Badshah  Beby707  MANIFEST.in  Makefile  NOTICE  README.md  README.md Jedle70  README.rst  Rajpomane  dev-requirements.txt  python-3-1-5.apk  readthedocs.yml  requirements.txt  requirements_extras.txt  setup.cfg  setup.py  sts1921bot  tox.ini  update_bot_precheckout_query.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  question.md
.github/workflows/: label.yml  python.yml  release.yml  size.yaml
docs/: Makefile  Makefile_  README.md  make.bat  releases.py  requirements.txt  robots.txt  sitemap.py
docs/source/: conf.py  (+13 more)
examples/: README.md  advanced_echo.py  advanced_echo2.py  bot_keyboards.py  callback_queries.py  callback_query_handler.py  chat_members.py  dialogs.py  echo_bot.py  echobot.py  get_chat_members.py  get_chat_members2.py  get_dialogs.py  get_history.py  get_participants.py  get_participants2.py  hello.py  hello_world.py  inline_bots.py  inline_queries.py  keyboards.py  query_inline_bots.py  raw_update_handler.py  raw_updates.py  send_bot_keyboards.py  simple_echo.py  updates.py  use_inline_bots.py  welcome.py  welcome_bot.py  welcomebot.py
pyrogram/: __init__.py  __main__.py  client.py  dispatcher.py  emoji.py  file_id.py  filters.py  middleware.py  mime.types  mime_types.py  scaffold.py  sync.py  syncer.py  utils.py
tests/: __init__.py  test_file_id.py
(+1399 files in other folders)
