[metadata]
name = Pyrogram
version = attr: pyrogram.__version__
description = Telegram MTProto API Client Library for Python
long_description = file: README.rst
url = https://github.com/pyrogram/pyrogram
author = Dan Tès
author_email = admin@pyrogram.ml
license = LGPLv3+
keywords = telegram mtproto api client library python
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Internet
    Topic :: Communications :: Chat
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
zip_safe = False
include_package_data = True